# geode

./: .gitignore  Main.hs  README.md  default.nix  geode.cabal  shell.nix
.github/workflows/: build.yml
app/: Main.hs
infra/: configuration.nix
src/: Geode.hs
test/: Spec.hs
