name:                geode
synopsis:            A simple IP geolocation service
description:
  Geode is a simple web service that returns geographical information
  about an IP address using MaxMind's GeoIP2 City database.
  .
  Geode can look up a given IP address or the IP address associated with
  the request.  In the latter case, it honors the X-Forwarded-For header
  if present.
  .
  See the readme in the Git repository for more details.
homepage:            https://github.com/earldouglas/geode
version:             0
license:             ISC
license-file:        LICENSE
author:              James Earl Douglas
maintainer:          james@earldouglas.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable geode
  ghc-options:       -Wall
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base
                     , scotty
                     , aeson
                     , geoip2 >= 0.3.0.0
                     , iproute
                     , http-types
                     , text
                     , wai
                     , network
                     , exceptions
                     , wai-cors
