name:                geode
synopsis:            A simple IP geolocation service
description:
  Geode is a simple web service that returns geographical information
  about an IP address using MaxMind's GeoIP2 City database.
  .
  Geode can look up a given IP address or the IP address associated with
  the request.  In the latter case, it honors the X-Forwarded-For header
  if present.
  .
  See the readme in the Git repository for more details.
homepage:            https://github.com/earldouglas/geode
version:             0
license:             ISC
license-file:        LICENSE
author:              James Earl Douglas
maintainer:          james@earldouglas.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geode
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , aeson
                     , aeson-pretty
                     , geoip2 >= 0.3.0.0
                     , iproute
                     , http-types
                     , text
                     , wai
                     , network
                     , exceptions
                     , wai-cors

executable geode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , geode

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , geode
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , geoip2 >= 0.3.0.0
                     , iproute
                     , case-insensitive
                     , text
